On index page id added for section about Club mahindra, made individual page responsive and modified files are: modified:   src/css/scss/pages/_detail.scss modified:   src/css/scss/pages/_home.scss modified:   src/css/scss/pages/_individual.scss modified:   src/index.html modified:   src/individual.html

--- a/src/individual.html
+++ b/src/individual.html
@@ -22,7 +22,7 @@
             <a href="./index.html" class="logo-box">
               <img src="<%= require('./img/club-mahindra-blog-logo.png') %>" alt="">
             </a>
-            <div class="all-in-one mobile-menu">
+            <!-- <div class="all-in-one mobile-menu">
               <div class="link-cotainer desk-menu">
                 <a class="close-link toggle_icon">
                   <img src="<%= require('./img/close.png') %>" alt="">
@@ -232,7 +232,7 @@
                   <div class="box fill"></div>
                 </div>
               </div>
-            </div>
+            </div> -->
               <div class="login-search">
             
                 <a href="#!" class="login-btn" target="_blank" rel="noopener noreferrer">
@@ -409,6 +409,8 @@
                                     brand ‘Club Mahindra’, today has over <strong> 250,000 members ,</strong> who can
                                     holiday at <strong>100+ resorts</strong>
                                     in India and abroad.
+                                    <br>
+                                    <a href="index.html#about-cm" class="read-link">Read More <img src="img/arrow-2f7817.png" alt=""></a>
                                 </p>
                             </div>
                         </div>
@@ -679,6 +681,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -690,6 +693,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -701,6 +705,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -714,6 +719,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -725,6 +731,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -736,6 +743,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>" alt=""></a>
                                     </div>
                                   </div>
@@ -748,6 +756,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -759,6 +768,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -770,6 +780,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -805,6 +816,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -816,6 +828,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -827,6 +840,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -840,6 +854,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -851,6 +866,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -862,6 +878,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -875,6 +892,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -886,6 +904,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
@@ -897,6 +916,7 @@
                                     <div class="lft-txt">
                                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur
                                         </p>
+                                        <p class="blg-date">09 Jun 2018</p>
                                         <a class="arrow" href="#"> Book Now <img src="<%= require('./img/arrow.png') %>"
                                                 alt=""></a>
                                     </div>
