--- a/src/index.html
+++ b/src/index.html
@@ -1004,7 +1004,7 @@
         </div>
       </div>
     </section>
-    <section class="about-club">
+    <section class="about-club" id="about-cm">
       <div class="container">
         <div class="content">
         <h2 class="title">About Club Mahindra</h2>
