index page responsive and popup

--- a/src/footer.html
+++ b/src/footer.html
@@ -1,1 +1,299 @@
-
+<div class="footer-wrapper">
+  <div class="container">
+    <h2>Popular Search Resorts</h2>
+    <ul class="pop-resort">
+      <li><a href="javascript:void(0);"> Resort in Goa </a></li>
+      <li><a href="javascript:void(0);"> Resort in Shimla </a></li>
+      <li><a href="javascript:void(0);"> Resort in Manali </a></li>
+      <li><a href="javascript:void(0);"> Resort in Daman </a></li>
+      <li><a href="javascript:void(0);"> Resort in Alappuzha </a></li>
+      <li><a href="javascript:void(0);"> Resort in Kashmir </a></li>
+      <li><a href="javascript:void(0);"> Resort in Coorg </a></li>
+      <li><a href="javascript:void(0);"> Resort in Hampi </a></li>
+      <li><a href="javascript:void(0);"> Resort in Uttarakhand </a></li>
+      <li><a href="javascript:void(0);"> Resort in Munnar </a></li>
+      <li><a href="javascript:void(0);"> Resort in Ladakh </a></li>
+      <li><a href="javascript:void(0);"> Resort in Alibaug </a></li>
+      <li><a href="javascript:void(0);"> Resort in Mussoorie </a></li>
+      <li><a href="javascript:void(0);"> Resort in Darjeeling </a></li>
+      <li><a href="javascript:void(0);"> Resort in Mahabaleshwar </a></li>
+      <li><a href="javascript:void(0);"> Resort in Agra </a></li>
+      <li><a href="javascript:void(0);"> Resort in Mysore </a></li>
+      <li><a href="javascript:void(0);"> Resort in Daman </a></li>
+      <li><a href="javascript:void(0);"> Resort in Diu </a></li>
+      <li><a href="javascript:void(0);"> Resort in Ooty </a></li>
+      <li><a href="javascript:void(0);"> Resorts in Kerala </a></li>
+      <li><a href="javascript:void(0);"> Resorts in Rajasthan </a></li>
+      <li><a href="javascript:void(0);"> Resort in Meghalaya </a></li>
+    </ul>
+    <div class="middle-footer ">
+      <div class="lft-footmenu m-footmenu footerAcc">
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Domestic Resorts</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Resort in Goa</a></li>
+                <li><a href="javascript:void(0);"> Resort in Kerala</a></li>
+                <li><a href="javascript:void(0);"> Resort in Himachal Pradesh</a></li>
+                <li><a href="javascript:void(0);"> Resorts in Sikkim</a></li>
+                <li><a href="javascript:void(0);"> Resorts in Ooty</a></li>
+                <li><a href="javascript:void(0);"> More</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Investors</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Board of Directors & Committees</a></li>
+                <li><a href="javascript:void(0);"> Financials</a></li>
+                <li><a href="javascript:void(0);"> Stock Exchange Filing</a></li>
+                <li><a href="javascript:void(0);"> Investor Relations</a></li>
+                <li><a href="javascript:void(0);"> Stock updates - BSE</a></li>
+                <li><a href="javascript:void(0);"> Stock updates - NSE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>     
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">About Us</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Awards</a></li>
+                <li><a href="javascript:void(0);"> Career</a></li>
+                <li><a href="javascript:void(0);"> Company Overview</a></li>
+                <li><a href="javascript:void(0);"> Leadership</a></li>
+                <li><a href="javascript:void(0);"> Corporate Sustainability & CSR</a></li>
+              </ul>
+            </div>     
+          </div>     
+        </div>     
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Experiences</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Stay Experiences </a></li>
+                <li><a href="javascript:void(0);"> Signature Experiences</a></li>
+                <li><a href="javascript:void(0);"> Indulge Your Senses</a></li>
+                <li><a href="javascript:void(0);"> Children Love These</a></li>
+                <li><a href="javascript:void(0);"> Dining Experiences</a></li>
+              </ul>
+            </div>     
+          </div>     
+        </div>     
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">More</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Corporate Membership</a></li>
+                <li><a href="javascript:void(0);"> Redeem Holiday Voucher</a></li>
+                <li><a href="javascript:void(0);"> Business Partner Login</a></li>
+                <li><a href="javascript:void(0);"> Bliss</a></li>
+                <li><a href="javascript:void(0);"> Gozest</a></li>
+                <li><a href="javascript:void(0);"> Member Login</a></li>
+              </ul>
+            </div>     
+          </div>     
+        </div>     
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Magicstream</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Resorts </a></li>
+                <li><a href="javascript:void(0);"> Feast</a></li>
+                <li><a href="javascript:void(0);"> Alive</a></li>
+                <li><a href="javascript:void(0);"> Soul</a></li>
+                <li><a href="javascript:void(0);"> Travelogues</a></li>
+                <li><a href="javascript:void(0);"> Explore</a></li>
+              </ul>
+            </div>     
+          </div>     
+        </div>     
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Community</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Travel Diaries</a></li>
+                <li><a href="javascript:void(0);"> Making Every Moment Magical</a></li>
+                <li><a href="javascript:void(0);"> Social Buzz</a></li>
+                <li><a href="javascript:void(0);"> Blogs</a></li>
+              </ul>
+            </div>      
+          </div>      
+        </div>      
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Blog</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Experiences</a></li>
+                <li><a href="javascript:void(0);"> Places to Visit</a></li>
+                <li><a href="javascript:void(0);"> Things to Do</a></li>
+                <li><a href="javascript:void(0);"> For Kids</a></li>
+                <li><a href="javascript:void(0);"> Travel Stories</a></li>
+                <li><a href="javascript:void(0);"> Travel Guide</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>      
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Media</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> Press Releases</a></li>
+                <li><a href="javascript:void(0);"> Media Contacts</a></li>
+                <li><a href="javascript:void(0);"> In The News</a></li>
+                <li><a href="javascript:void(0);"> Partner with us</a></li>
+                <li><a href="javascript:void(0);"> Gourmet Getaways</a></li>
+                <li><a href="javascript:void(0);"> Resort Development</a></li>
+              </ul>
+            </div>      
+          </div>      
+        </div>      
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Feedback</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+              <ul>
+                <li><a href="javascript:void(0);"> DND Registry</a></li>
+                <li><a href="javascript:void(0);"> Grievance Redressal</a></li>
+                <li><a href="javascript:void(0);"> Franchise Opportunity</a></li>
+                <li><a href="javascript:void(0);"> RCI</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div> <!-- //end lft-footmenu -->
+      <div class="rgt-footmenu m-footmenu footerAccCon">
+        <div class="ac m-footlist">
+          <h3 class="ac-header">
+            <button type="button" class="ac-trigger">Contact Us</button>
+          </h3>
+          <div class="ac-panel">
+            <div class="ac-text">
+          <ul>
+            <li>Customer Care Numbers</li>
+            <li> New Memberships</li>
+            <li> 1800 209 2345</li>
+            <li> IST - 9:00AM to 9:00PM</li>
+            <li> Existing members - India</li>
+            <li> 1800 266 8899</li>
+            <li> IST - 9:30AM to 6:30PM (Mon to Sat)</li>
+            <li> For Existing members - International</li>
+            <li> 022 69779510 </li>
+            <li> IST - 9:30AM to 6:30PM (Mon to Sat)</li>
+            <li> For Member Enquiries</li>
+            <li> memberexperience@mahindraholidays.com</li>
+            <li> For Franchisee Enquiries</li>
+            <li> business.partner@mahindraholidays.com</li>
+          </ul>
+          </div>
+          </div>
+        </div>
+      </div> <!-- //end rgt-footmenu -->
+    </div> <!-- //end middle-footer -->
+    <div class="di-flex">
+      <p class="tc-box">
+        <strong> Copyright © 2019 Mahindra & Mahindra Ltd. All rights reserved - </strong>
+        <a href="http://" target="_blank" class="link" rel="noopener noreferrer">Terms of Use</a> |
+        <a href="http://" target="_blank" class="link"  rel="noopener noreferrer">Privacy Policy</a> |
+        <a href="http://" target="_blank" class="link"  rel="noopener noreferrer">Credits</a> |
+        <a href="http://" target="_blank" class="link"  rel="noopener noreferrer">Disclaimer</a>
+      </p>
+      <div class="social-madia">
+        <a href="#!">
+          <img src="./img/component/facebook.png" alt="">
+        </a>
+        <a href="#!">
+          <img src="./img/component/yt.svg" alt="">
+        </a>
+        <a href="#!">
+          <img src="./img/component/in.svg" alt="">
+        </a>
+        <a href="#!">
+          <img src="./img/component/tw.svg" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<a href="#top" id="scrollToTop" class="scroll-top">
+  <img src="./img/component/share.webp" alt="">
+</a>
+    <section id="mutiStepForm" class="popup-form">
+      <div class="form-container">
+        <h2>Fill in the form below & we’ll reach out!</h2>
+        <form class="form-content" id="popupFrom">
+          <div class="col-input">
+            <div class="control">
+              <input type="text" class="form-control" name="fname" id="fname" placeholder="Name"
+               required>
+            </div>
+            <p class="invalid">Please enter the valid name.</p>
+          </div>
+          <div class="col-input">
+            <div class="control">
+              <input class="form-control" type="tel" placeholder="Mobile Number" maxlength="10"
+                onkeypress="return AllowOnlyNumbers(event);" required>
+            </div>
+            <p class="invalid">Please enter the valid name.</p>
+          </div>
+          <div class="col-input">
+            <div class="control">
+              <input class="form-control" type="tel" placeholder="Age" maxlength="2"
+                onkeypress="return AllowOnlyNumbers(event);" required>
+            </div>
+            <p class="invalid">Please enter the valid age.</p>
+          </div>
+          <div class="col-input">
+            <div class="control">
+              <input class="form-control" type="email" placeholder="Email" required>
+            </div>
+            <p class="invalid">Please enter the valid email.</p>
+          </div>
+          <div class="col-input width-100">
+            <div class="control">
+              <input type="text" class="form-control" required placeholder="Where are you from?">
+            </div>
+            <p class="invalid">Please enter the Where are you from.</p>
+          </div>
+          <div class="col-input select-input width-100">
+            <div class="control">
+              <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" class="form-control check-box" required>
+              <label for="vehicle1" class="label">I authorize Club Mahindra to call/email/SMS/Whatsapp me for membership plans and ongoing promotions and offers</label>
+            </div>
+            <p class="invalid">Please select.</p>
+          </div>
+        </form>
+        <button type="submit" data-form-id="popupFrom"  class="formSumit submit-btn width-100">Submit</button>
+      </div>
+    </section>
