create category indivigul and feedback integration

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body data-barba="wrapper">
 
-    <div class="wrapper" data-barba="container" data-barba-namespace="home">
+    <div class="wrapper" data-barba="container" data-barba-namespace="home" id="playPopupYtVid">
       <header class="acc-header inernal-click" id="top-menu">
         
       </header>
@@ -28,9 +28,9 @@
                       <img src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img">
                       <div class="content">
                         <div class="text-content">
-                          <h2><a href="#!">It’s Time for Music Lovers to Unite <br>
+                          <h1><a href="#!">It’s Time for Music Lovers to Unite <br>
                           Welcome to Arunachal Pradesh’s <br>
-                          Ziro Music Festival</a></h2>
+                          Ziro Music Festival</a></h1>
                           <!-- <a href="#!" class="read-more">Read More <i class="arrow right"></i></a> -->
                         </div>
                       </div>
@@ -41,9 +41,9 @@
                       <img src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img">
                       <div class="content">
                         <div class="text-content">
-                          <h2><a href="#!">It’s Time for Music Lovers to Unite <br>
+                          <h1><a href="#!">It’s Time for Music Lovers to Unite <br>
                           Welcome to Arunachal Pradesh’s <br>
-                          Ziro Music Festival</a></h2>
+                          Ziro Music Festival</a></h1>
                           <!-- <a href="#!" class="read-more">Read More <i class="arrow right"></i></a> -->
                         </div>
                       </div>
@@ -73,15 +73,13 @@
                     </div>
                     <div class="col-input">
                       <div class="control">
-                        <input class="form-control" type="tel" placeholder="Mobile Number" maxlength="10"
-                          onkeypress="return AllowOnlyNumbers(event);" required>
+                        <input class="form-control allNumber" type="tel" placeholder="Mobile Number" maxlength="10" required>
                       </div>
                       <p class="invalid">Please enter the valid name.</p>
                     </div>
                     <div class="col-input">
                       <div class="control">
-                        <input class="form-control" type="tel" placeholder="Age" maxlength="2"
-                          onkeypress="return AllowOnlyNumbers(event);" required>
+                        <input class="form-control" type="tel" placeholder="Age" maxlength="2" required>
                       </div>
                       <p class="invalid">Please enter the valid age.</p>
                     </div>
@@ -246,7 +244,7 @@
               </div>
               <div class="item">
                 <a class="banner-item" href="#!">
-                  <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
+                  <img src="<%= require('./img/Blogs2.jpg') %>" alt="" class="bg-img">
                   <div class="content">
                     <div class="text-content">
                       <h2>Know the Important Tourist Places in and Around Wayanad</h2>
@@ -261,7 +259,7 @@
               </div>
               <div class="item">
                 <a class="banner-item" href="#!">
-                  <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
+                  <img src="<%= require('./img/Blogs3.jpg') %>" alt="" class="bg-img">
                   <div class="content">
                     <div class="text-content">
                       <h2>Know the Important Tourist Places in and Around Wayanad</h2>
