--- a/src/header.html
+++ b/src/header.html
@@ -65,7 +65,7 @@
               <div class="di-flex">
                 <div class="img-box">
                   <figure>
-                    <img src="./img/component/IMAGE-RESIZE_350X350_ -04.jpg" alt="">
+                    <img src="./img/component/Hot-Air-Balloon-Resized.jpg" alt="">
                     <figcaption class="content">
                       <div class="text">
                         <p>View all</p>
@@ -159,10 +159,10 @@
                     <div class="mega_menu_inner">
                       <p><a class="resort_heading" href="#">Resorts In India</a></p>        
                       <ul>
-                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-east">EAST (6)</a></li>
-                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-north">NORTH (15)</a></li>
-                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-south">SOUTH (23)</a></li>
-                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-west">WEST (28)</a></li>
+                        <li><a href="#!">EAST (6)</a></li>
+                        <li><a href="#!">NORTH (15)</a></li>
+                        <li><a href="#!">SOUTH (23)</a></li>
+                        <li><a href="#!">WEST (28)</a></li>
                       </ul>
                     </div>
                   </div>
@@ -170,10 +170,10 @@
                     <div class="mega_menu_inner">
                       <a class="resort_heading" href="#">International Resorts</a>        
                       <ul>
-                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/america">United States of America (10)</a></li>
-                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/asia">ASIA (8)</a></li>
-                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/europe">EUROPE (14)</a></li>
-                        <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-arabian-dreams-resort-in-dubai-uae">Middle East (1)</a></li>                                   
+                        <li><a href="#!">United States of America (10)</a></li>
+                        <li><a href="#!">ASIA (8)</a></li>
+                        <li><a href="#!">EUROPE (14)</a></li>
+                        <li><a href="#!">Middle East (1)</a></li>                                   
                       </ul>
                     </div>
                   </div>
@@ -189,7 +189,7 @@
             <div class="ac-panel">
               <div id="experienceHeaderMob" class="mega_menu">
                 <div class="col-12">
-                  <a href="https://www.clubmahindra.com/experiences">View all 2000+ Experiences</a>
+                  <a href="#!">View all 2000+ Experiences</a>
                 </div>
                 <div class="col-12">
                   <div class="mega_menu_inner">
