all feedback box

--- a/src/header.html
+++ b/src/header.html
@@ -137,9 +137,11 @@
         </ul>
       </div>
       <div class="link-cotainer mob-menu">
-        <a class="close-link toggle_icon">
-          &times;
-        </a>
+        <div class="cl-right">
+          <a class="close-link toggle_icon">
+            &times;
+          </a>
+        </div>
         <!-- <div class="logi-btn">
           <h4 class="cb-title">Log In to Member Portal</h4>
           <a href="#!" class="btn-primary login-btn">Join The Club</a>
@@ -152,9 +154,9 @@
             <div class="ac-panel">
               <div class="menu-item mega_menu">
                 <div >
-                  <div class="col-12">
+                  <!-- <div class="col-12">
                     <a href="https://www.clubmahindra.com/resorts" class="viewall_resort">View all 100+ Resorts</a>
-                  </div>
+                  </div> -->
                   <div class="col-12">
                     <div class="mega_menu_inner">
                       <p><a class="resort_heading" href="#">Resorts In India</a></p>        
@@ -189,21 +191,21 @@
             <div class="ac-panel">
               <div id="experienceHeaderMob" class="mega_menu">
                 <div class="col-12">
-                  <a href="#!">View all 2000+ Experiences</a>
+                  <a href="#!" class="resort_heading">View all 2000+ Experiences</a>
                 </div>
                 <div class="col-12">
                   <div class="mega_menu_inner">
                     <ul>
-                      <li><a href="#!" class="resort_heading">Stay Experiences</a></li>
-                      <li><a href="#!" class="resort_heading">Signature Experiences</a></li>
-                      <li><a href="#!" class="resort_heading">Indulge Your Senses</a></li>
-                      <li><a href="#!" class="resort_heading">Children Love These</a></li>
-                      <li><a href="#!" class="resort_heading">Dining Experiences</a></li>
-                      <li><a href="#!" target="_blank" class="resort_heading">Magic Stream</a></li>
+                      <li><a href="#!" >Stay Experiences</a></li>
+                      <li><a href="#!" >Signature Experiences</a></li>
+                      <li><a href="#!" >Indulge Your Senses</a></li>
+                      <li><a href="#!" >Children Love These</a></li>
+                      <li><a href="#!" >Dining Experiences</a></li>
+                      <li><a href="#!" >Magic Stream</a></li>
                     </ul>
                   </div>
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                   <div class="mega_menu_inner">
                     <p><a class="resort_heading" href="#">'Only At Club Mahindra' Experiences</a></p>    
                     <ul>
@@ -217,7 +219,8 @@
                       <li><a href="#!">Jal Mahal</a></li>
                     </ul>
                   </div>
-                </div></div>
+                </div> -->
+              </div>
             </div>
           </div>
           
