--- a/src/category-listing.html
+++ b/src/category-listing.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link href="./favicon.ico" rel="icon" />
+    <link href="./favicon.png" rel="icon" />
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="icon" src="favicon.ico" />
   </head>
   <body data-barba="wrapper">
 
@@ -50,14 +49,32 @@
                     </div>
                   </div>
                 </div>
-                <div class="cat-row">
-                  <a href="#!">Experiences</a> | 
-                  <a href="#!">Places to Visit</a> | 
-                  <a href="#!">Things to Do</a> | 
-                  <a href="#!">For Kids</a> | 
-                  <a href="#!">Food</a> | 
-                  <a href="#!">Travel Stories</a>| 
-                  <a href="#!">Travel Guide</a>
+                <div class="cat-row" id="catNavBar">
+                  <nav class="owl-carousel owl-theme category-carousel" id="catNav">
+                    <div class="item">
+                      <a href="#!">Experiences</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">Places to Visit</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">Things to Do</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">For Kids</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">Food</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">Travel Stories</a>
+                    </div>
+                    <div class="item">
+                      <a href="#!">Travel Guide</a>
+                    </div>
+                    <div class="item">
+                    </div>
+                  </nav>
                 </div>
               </article>
               <aside>
