changes has done

--- a/src/category-listing.html
+++ b/src/category-listing.html
@@ -412,20 +412,10 @@
                   </div>
                 </div>
               </a>
-              <a href="#!" class="cat-box">
-                <div class="img-box">
-                  <img src="<%= require('./img/experiences.jpg') %>" alt="">
-                </div>
-                <div class="content">
-                  <h3>Know the Important Tourist Places in and Around Wayanad</h3>
-                  <div class="link">
-                    <div class="btn" href="#!">Read More <i class="arrow right"></i></div>
-                  </div>
-                </div>
-              </a>
+              
 
             </div>
-            <butto class="load-more readMoreCat" type="button">Load More</butto>
+            <button class="load-more readMoreCat" type="button">Load More</button>
           </div>
         </section>
         <section class="other-cat">
