--- a/src/footer.html
+++ b/src/footer.html
@@ -1,7 +1,7 @@
 <div class="footer-wrapper">
   <div class="container">
     <h2>Popular Search Resorts</h2>
-    <ul class="pop-resort">
+    <!-- <ul class="pop-resort">
       <li><a href="javascript:void(0);"> Resort in Goa </a></li>
       <li><a href="javascript:void(0);"> Resort in Shimla </a></li>
       <li><a href="javascript:void(0);"> Resort in Manali </a></li>
@@ -25,7 +25,32 @@
       <li><a href="javascript:void(0);"> Resorts in Kerala </a></li>
       <li><a href="javascript:void(0);"> Resorts in Rajasthan </a></li>
       <li><a href="javascript:void(0);"> Resort in Meghalaya </a></li>
-    </ul>
+    </ul> -->
+    <ul class="pop-resort">
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-varca-beach-resort-in-goa">Resort in Goa</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kandaghat-resort-in-shimla-himachal-pradesh">Resort in Shimla</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-snow-peaks-resort-in-manali-himachal-pradesh">Resort in Manali</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/devka-beach-resort-daman">Resort in Daman</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/ramada-alleppey">Resort in Alappuzha</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/r-k-sarovar-portico-resort--in-jammu-and-kashmir">Resort in Kashmir</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-madikeri-resort-in-coorg-karnataka">Resort in Coorg</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/vijayshree-resort-and-heritage-village-hampi-karnataka">Resort in Hampi</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kanatal-resort-in-uttarakhand">Resort in Uttarakhand</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-munnar-resort-in-kerala">Resort in Munnar</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/driftwood-ladakh">Resort in Ladakh</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/tropicana-resort-and-spa-alibaug">Resort in Alibaug</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mussoorie-resort-in-uttarakhand">Resort in Mussoorie</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/summit-hermon-spa-hotel-in-darjeeling">Resort in Darjeeling</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-saj-resort-in-mahabaleshwar-maharashtra">Resort in Mahabaleshwar</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/ramada-plaza-resort-in-agra">Resort in Agra</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/the-golden-landmark-resort-in-mysore-karnataka">Resort in Mysore</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/devka-beach-resort-daman">Resort in Daman</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/azzaro-resorts-and-spa-in-diu">Resort in Diu</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-derby-green-ooty-resort-in-tamil-nadu">Resort in Ooty</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-ashtamudi-resort-in-kerala">Resorts in Kerala</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-udaipur-resort-in-rajasthan">Resorts in Rajasthan</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/polo-towers-shillong-meghalaya">Resort in Meghalaya</a></li>
+  </ul>
     <div class="middle-footer ">
       <div class="lft-footmenu m-footmenu footerAcc">
         <div class="ac m-footlist">
