--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <div id="bannerCarousel" class="owl-carousel owl-theme banner-carousel">
                   <div class="item">
                     <div class="banner-item">
-                      <img src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img">
+                      <img data-src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img lozad">
                       <div class="content">
                         <div class="text-content">
                           <h1><a href="#!">It’s Time for Music Lovers to Unite <br>
@@ -34,7 +34,7 @@
                   </div>
                   <div class="item">
                     <div class="banner-item">
-                      <img src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img">
+                      <img data-src="<%= require('./img/bg/banner-1.jpg') %>" alt="" class="bg-img lozad">
                       <div class="content">
                         <div class="text-content">
                           <h1><a href="#!">It’s Time for Music Lovers to Unite <br>
@@ -130,7 +130,7 @@
             <div class="di-flex category-box">
               <a href="#!" class="cat-box">
                 <div class="img-box">
-                  <img src="<%= require('./img/experiences.jpg') %>" alt="">
+                  <img class="lozad" data-src="<%= require('./img/experiences.jpg') %>" alt="">
                 </div>
                 <div class="di-flex content">
                   <div class="text">
@@ -144,7 +144,7 @@
               </a>
               <a href="#!" class="cat-box">
                 <div class="img-box">
-                  <img src="<%= require('./img/Places-to-Visit.jpg') %>" alt="">
+                  <img class="lozad" data-src="<%= require('./img/Places-to-Visit.jpg') %>" alt="">
                 </div>
                 <div class="di-flex content">
                   <div class="text">
@@ -158,7 +158,7 @@
               </a>
               <a href="#!" class="cat-box">
                 <div class="img-box">
-                  <img src="<%= require('./img/Things-to-do.jpg') %>" alt="">
+                  <img class="lozad" data-src="<%= require('./img/Things-to-do.jpg') %>" alt="">
                 </div>
                 <div class="di-flex content">
                   <div class="text">
